# playwright-sandboxer

./: .gitignore  .windsurfrules  Dockerfile  Dockerfile.base  README.md  alembic.ini  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 127e36433207_add_sandbox_model.py  38d29bdd6f2f_add_event_model.py  51ae42d266ba_recreate_users_table.py  52b3ac4bcea9_add_event_created_by.py  bd54ad09e925_.py  dd7da47d08c2_delete_users_table.py  df1b768cf4fa_.py  fe79b2c21052_add_sandbox_model.py
sandbox/: main.py
sandbox/api/: deps.py
sandbox/auth/: models.py  router.py  schemas.py  security.py
sandbox/core/: config.py  db.py  enums.py
sandbox/sb/: automate.py  manager.py  models.py  ws_server.py
sandbox/sb/scripts/: run_x11.py
