[project]
name = "playwright-sandboxer"
version = "0.1.0"
description = ""
authors = [
    {name = "bengabp",email = "bengabdev4@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright (>=1.51.0,<2.0.0)",
    "pymongo (>=4.11.3,<5.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "redis (>=5.2.1,<6.0.0)"
]

[tool.poetry]
packages = [{include = "playwright_sandboxer", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
